<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/o_prego_da_peixaria"
    >


    <ImageView
        android:id="@+id/company_logo"
        android:layout_width="match_parent"
        android:layout_height="@dimen/top_bar_height"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:background="@color/topBarBackground"
        android:contentDescription="@string/company_name"
        android:foregroundGravity="center"
        android:src="@drawable/all_inclusive" />




    <LinearLayout
        android:id="@+id/contactCard"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_margin="@dimen/activity_horizontal_margin"
        android:background="@drawable/background_with_shadow"
        android:elevation="@dimen/card_elevation"
        android:orientation="vertical"
        android:padding="@dimen/activity_vertical_margin"
        android:layout_below="@id/company_logo">

        <TextView
            android:layout_width="match_parent"
            android:textSize="@dimen/card_text_size"
            android:layout_height="@dimen/card_text_height"
            android:drawableLeft="@drawable/all_inclusive"
            android:drawablePadding="@dimen/drawablePadding"
            android:gravity="left|center_vertical"
            android:paddingLeft="@dimen/padding_left"
            android:text="@string/company_name"
            android:contentDescription="@string/company_name"/>

        <View
            android:id="@+id/lineSeparator1"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/card_line_height"
            android:layout_margin="@dimen/card_line_margin"
            android:background="@color/cardLineColor" />

        <TextView
            android:layout_width="match_parent"
            android:textSize="@dimen/card_text_size"
            android:layout_height="@dimen/card_text_height"
            android:drawableLeft="@drawable/phone"
            android:drawablePadding="@dimen/drawablePadding"
            android:gravity="left|center_vertical"
            android:paddingLeft="@dimen/padding_left"
            android:text="@string/company_phone_number"
            android:contentDescription="@string/company_phone_number"
            android:onClick="callCompany"
            />

        <View
            android:id="@+id/lineSeparator2"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/card_line_height"
            android:layout_margin="@dimen/card_line_margin"
            android:background="@color/cardLineColor" />

        <TextView
            android:layout_width="match_parent"
            android:textSize="@dimen/card_text_size"
            android:layout_height="@dimen/card_text_height"
            android:drawableLeft="@drawable/map_marker"
            android:drawablePadding="@dimen/drawablePadding"
            android:gravity="left|center_vertical"
            android:paddingLeft="@dimen/padding_left"
            android:text="@string/company_address"
            android:contentDescription="@string/company_address"
            android:onClick="goToAddress"
            />

        <View
            android:id="@+id/lineSeparator3"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/card_line_height"
            android:layout_margin="@dimen/card_line_margin"
            android:background="@color/cardLineColor" />

        <TextView
            android:id="@+id/openHours"
            android:textSize="@dimen/card_text_size"
            android:layout_width="match_parent"
            android:layout_height="@dimen/card_text_height"
            android:drawableLeft="@drawable/clock"
            android:drawablePadding="@dimen/drawablePadding"
            android:gravity="left|center_vertical"
            android:paddingLeft="@dimen/padding_left"
            android:text="@string/company_open_hours"
            android:contentDescription="@string/company_open_hours"
            />



    </LinearLayout>



    <Button
        android:id="@+id/share_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/contactCard"
        android:layout_centerHorizontal="true"
        android:contentDescription="@string/for_share"
        android:text="@string/for_share"

        android:textSize="@dimen/share_button_text_size_MD"


        android:layout_marginLeft="@dimen/share_button_margin_left"
        android:layout_marginRight="@dimen/share_button_margin_right"

        android:textAllCaps="true"
        android:theme="@style/sendButton"

        android:onClick="shareIntent"/>








    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_alignParentBottom="true"
        android:id="@+id/buttonsPanel">

        <ImageButton
            android:id="@+id/gplus"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/google_plus"
            android:onClick="goToGPlus"
            android:contentDescription="@string/company_gplus"
            />

        <ImageButton
            android:id="@+id/linkedin"
            android:layout_toRightOf="@id/gplus"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/linkedin"
            android:onClick="goToLinkedin"
            android:contentDescription="@string/company_linkedin"
            />

        <ImageButton
            android:id="@+id/site"
            android:layout_toRightOf="@id/linkedin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/web"
            android:onClick="goToCompanyWebsite"
            android:contentDescription="@string/company_website"
            />

        <ImageButton
            android:id="@+id/qr"
            android:layout_toRightOf="@id/site"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="showQrCode"
            android:src="@drawable/qrcode"
            android:contentDescription="@string/company_qrcode"
            />

    </LinearLayout>


</RelativeLayout>
